# studydrive-dl-api

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  config.py  main.py
app/templates/: home.html
