[tool.poetry]
name = "studydrive-dl-api"
version = "0.1.0"
description = ""
authors = ["Daniel Malik <mail@fronbasal.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
python-dotenv = "^1.1.0"
jinja2 = "^3.1.6"
redis = {version = "^5.2.1", extras = ["hiredis"]}


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
